--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Progate</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="assets/stylesheet.css">
     
   </head>
   <body>
